feat: reworked filteration for quizzes
